# pos-fruteria

./: .gitignore  PRODUCCION.md  index.html  package-lock.json  package.json  vite.config.ts
.claude/: launch.json
.github/workflows/: build-windows.yml
mobile/: index.html  package-lock.json  package.json  vite.config.ts
mobile/src/: main.tsx  styles.css
mobile/src/lib/: api.ts  auth.tsx  scanner.tsx
mobile/src/pages/: Consulta.tsx  Home.tsx  Login.tsx  Pairing.tsx  Recepcion.tsx
scripts/: import_catalogo.py
server-remoto/: .dockerignore  .env.example  Cargo.toml  Dockerfile  README.md  railway.toml  test_bcrypt.rs
server-remoto/migrations/: 001_init.sql  002_audit_secuencia.sql  003_cortes_origen.sql  004_proveedores_activo.sql  005_modo_caja.sql  006_audit_log_sync.sql  007_config_y_roles.sql
server-remoto/src/: api.rs  auth.rs  config.rs  db.rs  error.rs  main.rs  rpc.rs  sync.rs
server-remoto/static/: index.html
server-remoto/static/assets/: index-Edtdy6i8.js  index-VQZUbYrW.css
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/resources/mobile-dist/: index.html  manifest.webmanifest
src-tauri/resources/mobile-dist/assets/: index-C8aDOdL_.js  index-VEpdLOnu.css
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: auth.rs  bitacora.rs  conexion.rs  cortes.rs  devoluciones.rs  entradas.rs  exportar.rs  importar.rs  merma.rs  mod.rs  pedidos.rs  presupuestos.rs  print.rs  print_termico.rs  productos.rs  recepcion.rs  respaldos.rs  sync_remoto.rs  usuarios.rs  ventas.rs
src-tauri/src/db/: connection.rs  migrations.rs  mod.rs  schema.rs
src-tauri/src/server/: auth.rs  error.rs  handlers.rs  mod.rs  state.rs  tls.rs
src-tauri/src/sync/: apply.rs  client.rs  mod.rs  outbox.rs  payload.rs  state.rs  worker.rs
src/components/: ModalModoCaja.tsx  Numpad.tsx  TouchKeyboard.tsx
src/lib/: UpdateChecker.tsx  invokeCompat.ts
src/pages/: Ajustes.tsx  Bitacora.tsx  Catalogo.tsx  Clientes.tsx  CortesCaja.tsx  Dashboard.tsx  Entradas.tsx  Etiquetas.tsx  HistorialVentas.tsx  Login.tsx  Merma.tsx  Pedidos.tsx  Presupuestos.tsx  PuntoDeVenta.tsx  Recepcion.tsx  Reportes.tsx  Sincronizacion.tsx  Usuarios.tsx
src/store/: authStore.ts  cortesStore.ts  historialStore.ts  productStore.ts  ventaStore.ts
src/utils/: print.ts  ticket.ts
web-admin/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web-admin/src/: App.tsx
web-admin/src/components/: Layout.tsx
web-admin/src/lib/: api.ts
web-admin/src/pages/: Clientes.tsx  Dashboard.tsx  Login.tsx  Productos.tsx  Ventas.tsx
